Einbinden des normalen Bootstrap wieder und Anpassen Navbar und Abstände

--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar-mobile.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar-mobile.html
@@ -23,7 +23,7 @@
         $("#dritteBox").show();
         $("#vierteBox").show();
         $("#blogBox").show();         $("#kontaktBox").show();
-        $("#pfeil1").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-right.png"); //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
+        $("#pfeil1").attr("src", "  https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-right.png "); //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
         $(".arrow").css("float", "right");    $(".arrow").css("padding-top", "0");         $(".arrow").css("padding-bottom", "0");
         $("#linkUeberUns").show();
         $("#ueberUnsSchrift").hide();
@@ -34,8 +34,8 @@
         $("#dritteBox").hide();
         $("#vierteBox").hide();
         $("#blogBox").hide();         $("#kontaktBox").hide();
-        $("#pfeil1").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-left.png") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $(".arrow").css("float", "left");  $(".arrow").css("padding-top", ".5rem"); $(".arrow").css("padding-bottom", "2rem");
+        $("#pfeil1").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-left.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
+        $(".arrow").css("float", "left");   $(".arrow").css("margin-bottom", "1rem");
         $("#linkUeberUns").hide();
         $("#ueberUnsSchrift").show();
       }
@@ -49,7 +49,7 @@
         $("#dritteBox").show();
         $("#vierteBox").show();
         $("#blogBox").show();         $("#kontaktBox").show();
-        $("#pfeil2").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-right.png") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
+        $("#pfeil2").attr("src", "  https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-right.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
         $(".arrow").css("float", "right");    $(".arrow").css("padding-top", "0");         $(".arrow").css("padding-bottom", "0");
         $("#linkProjekte").show();
         $("#projekteSchrift").hide();
@@ -59,8 +59,8 @@
         $("#dritteBox").hide();
         $("#vierteBox").hide();
         $("#blogBox").hide();         $("#kontaktBox").hide();
-        $("#pfeil2").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-left.png") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $(".arrow").css("float", "left");  $(".arrow").css("padding-top", ".5rem"); $(".arrow").css("padding-bottom", "2rem");
+        $("#pfeil2").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-left.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
+        $(".arrow").css("float", "left");   $(".arrow").css("margin-bottom", "1rem");
         $("#linkProjekte").hide();
         $("#projekteSchrift").show();
       }
@@ -89,7 +89,7 @@
         $("#zweiteBox").show();
         $("#vierteBox").show();
         $("#blogBox").show();         $("#kontaktBox").show();
-        $("#pfeil3").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-right.png") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
+        $("#pfeil3").attr("src", "  https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-right.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
         $(".arrow").css("float", "right");    $(".arrow").css("padding-top", "0");         $(".arrow").css("padding-bottom", "0");
         $("#linkSpenden").show();
         $("#spendenSchrift").hide();
@@ -100,8 +100,8 @@
         $("#zweiteBox").hide();
         $("#vierteBox").hide();
         $("#blogBox").hide();         $("#kontaktBox").hide();
-        $("#pfeil3").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-left.png") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $(".arrow").css("float", "left");  $(".arrow").css("padding-top", ".5rem"); $(".arrow").css("padding-bottom", "2rem");
+        $("#pfeil3").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-left.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
+        $(".arrow").css("float", "left");   $(".arrow").css("margin-bottom", "1rem");
         $("#linkSpenden").hide();
         $("#spendenSchrift").show();
       }
@@ -116,7 +116,7 @@
         $("#zweiteBox").show();
         $("#dritteBox").show();
         $("#blogBox").show();         $("#kontaktBox").show();
-        $("#pfeil4").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-right.png") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
+        $("#pfeil4").attr("src", "https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-right.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
         $(".arrow").css("float", "right");    $(".arrow").css("padding-top", "0");         $(".arrow").css("padding-bottom", "0");
         $("#linkFuerSie").show();
         $("#fuerSieSchrift").hide();
@@ -127,8 +127,8 @@
         $("#zweiteBox").hide();
         $("#dritteBox").hide();
         $("#blogBox").hide();         $("#kontaktBox").hide();
-        $("#pfeil4").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-left.png") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $(".arrow").css("float", "left");  $(".arrow").css("padding-top", ".5rem"); $(".arrow").css("padding-bottom", "2rem");
+        $("#pfeil4").attr("src", "https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-left.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
+        $(".arrow").css("float", "left");   $(".arrow").css("margin-bottom", "1rem");
         $("#linkFuerSie").hide();
         $("#fuerSieSchrift").show();
       }
@@ -159,7 +159,6 @@
 </script>
 
 <style>
-
 
 .navbarMobilgeraet,
 .navbarMobilgeraet {
@@ -207,7 +206,6 @@
   cursor: pointer;
 }
 .navbarMobilgeraet label {
-  width: 100%;
   display: block;
   z-index: 3;
   position: relative;
@@ -215,16 +213,14 @@
 .navbarMobilgeraet .nav {
   width: 100%;
   overflow-x: hidden;
+  justify-content: space-between; /*Extrem wichtiges Flexbox-Design, mit dem man beide Items in der Leiste gleichmäßig verteilt anzeigt */
 }
-.navbarMobilgeraet #nav-icon {
-  font-size: 28px;
-  line-height: 30px;
-  padding-left: 1em;
-  color: grey;
+.navbarMobilgeraet #nav-icon { /*Hamburger-Menu-Icon */
+  padding: 0 1rem;
+  padding-right: 2.5rem;
 }
 .navbarMobilgeraet .nav ul,
-.navbarMobilgeraet .nav li,
-.navbarMobilgeraet label {
+.navbarMobilgeraet .nav li {
   line-height: 45px;
   margin: 0;
   list-style: none;
@@ -253,17 +249,17 @@
 
 .navbarMobilgeraet hr {
   background: transparent;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
   border-top-width: 1px;
   border-top-color: #e3d7cb;
 }
 .navbarMobilgeraet .arrow { /* Die Pfeil in der ersten Ebene richtig setzen */
-  float: left;
-  position: relative;
-  top: 50%;
-  transform: translateY(25%);
+  transform: translateY(50%);
 }
 
 .navbarMobilgeraet .pfeilErsteUnterebene {
+  transform: translateY(50%);
   width: 20px;
   height: 20px;
   float: right;
@@ -281,12 +277,13 @@
 <div class="nav" style="position: fixed; top: 0; overflow: hidden; z-index: 1; background-color: #f8f5f2;">
   {% set entry = craft.entries.section('spendenfelderUndSo').slug('navbar').one() %}
 
+
   <a href="https://aufbau-website.de/craft/web/">
-    <img style="display: inline; padding-left: 10%;" src="{{ craft.assets.filename('chance-logo-rgb.png').one().getUrl() }}" id="logoMobile" alt="Logo" width="80" height="60">
+    <img style="display: inline; margin-left: 2.5rem;" src="{{ craft.assets.filename('chance-logo-rgb.png').one().getUrl() }}" id="logoMobile" alt="Logo" width="80" height="60">
   </a>
 
   <input type="checkbox" id="menu"/> <!-- Hamburger Menu, das nach unten klappt -->
-  <label for="menu" id="nav-icon" style="width: auto; display: inline; float: right; padding-right: 1em;"><img id="hamburgerMobile" style="max-width: 32px; max-height: 32px; padding-top: 1rem;" src=" {{ entry.bild3.one().url }} "> </label>
+  <label for="menu" id="nav-icon"><img id="hamburgerMobile" style="max-width: 32px; max-height: 32px; padding-top: 1rem;" src=" {{ entry.bild3.one().url }} "> </label>
 
 
   <div class="multi-level" style="width: 100vw; height: 100vh;">
