--- a/templates/craft_sicherungWebsite/templates/_layouts/layoutHome.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/layoutHome.html
@@ -4,8 +4,8 @@
   <title>{% block titelfuerseo %} {% endblock %}</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://www.aufbau-website.de/craft/web/CSSundJS/bootstrapcustom.min.css" rel="stylesheet" crossorigin="anonymous"/>
-  <link href="https://aufbau-website.de/craft/web/CSSundJS/bootstrapcustom.min.css" rel="stylesheet" crossorigin="anonymous"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
 
   <link href="https://www.aufbau-website.de/craft/web/CSSundJS/stylevorgaben2.css" rel="stylesheet" />
   <link href="https://aufbau-website.de/craft/web/CSSundJS/stylevorgaben2.css" rel="stylesheet" />
@@ -16,9 +16,13 @@
   <link href="https://aufbau-website.de/craft/web/CSSundJS/navbarCSS.css" rel="stylesheet" />
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  <script src="https://www.maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+
   <script src="https://aufbau-website.de/craft/web/CSSundJS/javascript.js"> </script>
+  <script src="https://www.aufbau-website.de/craft/web/CSSundJS/javascript.js"> </script>
 
 </head>
 
@@ -28,16 +32,9 @@
   {% include "_layouts/navbar" %}
   {% include "_layouts/navbar-mobile" %}
 
-  <div class="bootstrapiso">
-  <div class="stylevorgaben2">
 
   {% block headerbildPosition1 %} {% endblock %}
 
-</div>
-</div>
-
-<div class="bootstrapiso">
-  <div class="stylevorgaben2">
 
 
 {% block headerbildPosition2 %} {% endblock %}
@@ -48,9 +45,6 @@
 
 
 {% include "_layouts/footer" %}
-
-</div>
-</div>
 
   </body>
   </html>
