--- a/templates/craft_sicherungWebsite/templates/index.html
+++ b/templates/craft_sicherungWebsite/templates/index.html
@@ -9,17 +9,15 @@
 
 {% block block1 %}
 
-<div class="container-fluid text-center no-padding" id="ersterContainer" style="padding-top: 120px; position: relative;">
+<div class="container-fluid text-center no-padding" id="ersterContainer" style="padding-top: 10rem; position: relative;">
 
   <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; width: 40%; left: 0px;">
 
-  <div class="container achterspaltenlayout" style="padding-top:0px; position: relative;">
+  <div class="container achterspaltenlayout" style="padding: 0 15px; position: relative;">
 
     {% set entry = craft.entries.section('home').slug('mensch-schoepfung').one() %}
-    <div style="padding-bottom:50px; ">
       <h1 style="padding-bottom: 30px;"> {{ entry.title }}  </h1>
-      <div id="anleser"> {{ entry.anleser }}</div>
-    </div>
+      <div id="anleser" style="padding-bottom: 0;"> {{ entry.anleser }}</div>
   </div>
 </div>
 
@@ -29,11 +27,11 @@
 
   </div>
 
-<div class="container achterspaltenlayout text-center" style="padding-top: 30px;">
+<div class="container achterspaltenlayout text-center" style="padding-top: 5rem;">
   <div id="anleser"> {{ entry.text }}</div>
 </div>
 
-<div class="container zwoelferspaltenlayout text-center" style="padding-bottom: 4rem; padding-top: 0px;">
+<div class="container zwoelferspaltenlayout text-center" style="padding-bottom: 4.5rem; padding-top: 0px;">
   {% set entry = craft.entries.section('home').slug('armut-entkommen').one() %}
 
   <div class="row">
@@ -59,13 +57,13 @@
     </div>
   </div>
 
-  <a href="https://aufbau-website.de/craft/web/ueberUns" class="btn btn-primary" role="button">Erfahren Sie mehr über uns</a>
+  <a style="margin-top: 2rem;" href="https://aufbau-website.de/craft/web/ueberUns" class="btn btn-primary" role="button">Erfahren Sie mehr über uns</a>
 
 </div>
 
-<div class="container-fluid no-padding" style="background-color: #ffffff; height: 240px; padding: 0;">
+<div class="container-fluid no-padding" style="background-color: #ffffff; height: 20rem; padding: 0;   display: flex; flex-direction: column; justify-content: center;">
 
-  <div class="container achterspaltenlayout text-center" style="padding: 0; position: relative; top: 50%; transform: translateY(-50%);">
+  <div class="container achterspaltenlayout text-center" style="padding: 0;">
     {% set entries = craft.entries.section('home').slug('zitate-home').one().children().all() %}
     {% set entry = random(entries) %}
 
@@ -96,7 +94,7 @@
   </div>
 </div> <!-- Zufälliges Zitat -->
 
-<div class="container zwoelferspaltenlayout" style="padding-bottom: 30px;">
+<div class="container zwoelferspaltenlayout" style="padding-bottom: 4rem;">
   {% set entry = craft.entries.section('home').slug('neuigkeiten').one() %}
 
   <div class="text-center">
@@ -104,12 +102,15 @@
   </div>
 
   <style>
-    .stylevorgaben2 .reiter {
-      width: 30%;
+    .reiter {
+      width: 40%;
       font-size: 12px;
       height: 35px;
       margin-top: -35px;
       margin-left: 15px;
+    }
+    .card {
+      margin: 0 5px;
     }
   </style>
 
@@ -117,7 +118,7 @@
 
     {% set entries = craft.entries.section('projektberichte').all() %}
     {% set entry = random(entries) %}
-    <div class="col-md-4" style="padding-bottom: 50px;">
+    <div class="col-md-4">
     <div class="card border-light h-100">
       <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
       <button class="btn btn-primary reiter" role="button">Projektbericht</button>
@@ -130,7 +131,7 @@
 
 
     {% set entry = random(entries) %}
-    <div class="col-md-4" style="padding-bottom: 50px;">
+    <div class="col-md-4">
     <div class="card border-light h-100">
       <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
       <button class="btn btn-primary reiter" role="button">Projektbericht</button>
@@ -143,7 +144,7 @@
 
   {% set entries = craft.entries.section('blog').level('1').all() %}
     {% set entry = random(entries) %}
-    <div class="col-md-4" style="padding-bottom: 50px;">
+    <div class="col-md-4">
     <div class="card border-light h-100">
       <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
       <button class="btn btn-primary reiter" role="button">Blogeintrag</button>
@@ -156,7 +157,7 @@
 
   </div> <!-- Zufällige Blogeinträge oder Projektberichte - row-Ende -->
 
-  <div class="text-center">
+  <div class="text-center" style="padding-top: 4rem;">
   <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button">mehr laden</a>
   </div>
 </div>
@@ -166,11 +167,11 @@
   <div class="container achterspaltenlayout text-center">
     {% set entry = craft.entries.section('home').slug('neuigkeiten').one() %}
 
-    <h2> {{ entry.anleser }} </h2>
-    <div id="copy"> {{ entry.text }}</div>
-    <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button">Erfahren sie mehr über unsere Projekte</a>
+    <h2 style="padding-top: 4rem; padding-bottom: 1rem;"> {{ entry.anleser }} </h2>
+    <div id="anleser"> {{ entry.text }}</div>
+    <a style="margin-bottom: 3rem;" href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button">Erfahren sie mehr über unsere Projekte</a>
   </div>
-</div> <!-- Zufälliges Zitat -->
+</div> <!-- Erfahren Sie mehr über unsere Projekte - Button -->
 
 {% set entry = craft.entries.section('fuerSie').slug('freundesbrief').one() %}
   <div class="container zwoelferspaltenlayout">
@@ -212,7 +213,7 @@
 
   {% set entry = craft.entries.section('projekte').slug('kinderpate-werden').one() %}
 
-  <div class="container-fluid no-padding"  style="background-image: url({{ entry.bild.one().url }});">
+  <div class="container-fluid spendenaufruf"  style="background-image: url({{ entry.bild.one().url }});">
     <div class="row">
       <div class="col-lg-1 col-md-0">  </div>
       <div class="col-lg-4 col-md-5" style="position: relative; min-height: 150px;">   <img class="mx-auto d-block" id="kind" style="max-width: 100%; bottom: 0; left: 0; " src="{{ entry.bild.inReverse().one().url }}"> </div>
