--- a/templates/craft_sicherungWebsite/templates/projekte/themen.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/themen.html
@@ -185,7 +185,7 @@
 </div> <!-- Container für Carousel -->
 
 {% set entry = craft.entries.section('fuerSie').slug('fuelleintrag').one() %}
-<div class="container-fluid no-padding"  style="padding-top: 2.5rem; padding-bottom: 2.5rem; background-image: url({{ entry.bild.one().url }});">
+<div class="container-fluid spendenaufruf"  style="padding-top: 2.5rem; padding-bottom: 2.5rem; background-image: url({{ entry.bild.one().url }});">
   <div class="row">
     <div class="col-md-1">  </div>
     <div class="col-md-2">   <img class="img-fluid mx-auto d-block" src="{{ entry.bild2.one().url }}" style="max-height: 150px; padding-bottom: 10px;"> </div>
