--- a/templates/craft_sicherungWebsite/templates/spenden/jetztspenden.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/jetztspenden.html
@@ -2,7 +2,7 @@
 {% extends "_layouts/layoutHome.html" %}
 
 {% block titelfuerseo %}
-{% set entry = craft.entries.section('suchmaschinenoptimierung').slug('einmalig').one() %}
+{% set entry = craft.entries.section('suchmaschinenoptimierung').slug('jetzt-spenden').one() %}
 {{ entry.titelfeldFuerJens }}
 {% endblock %}
 
