--- a/templates/craft_sicherungWebsite/templates/spenden/patewerden.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/patewerden.html
@@ -2,7 +2,7 @@
 {% extends "_layouts/layoutHome.html" %}
 
 {% block titelfuerseo %}
-{% set entry = craft.entries.section('suchmaschinenoptimierung').slug('länderpate').one() %}
+{% set entry = craft.entries.section('suchmaschinenoptimierung').slug('pate-werden').one() %}
 {{ entry.titelfeldFuerJens }}
 {% endblock %}
 
