--- a/templates/craft_sicherungWebsite/web/CSSundJS/stylevorgaben2.css
+++ b/templates/craft_sicherungWebsite/web/CSSundJS/stylevorgaben2.css
@@ -1,4 +1,4 @@
-.stylevorgaben2 {
+{
   /* Entfernt das standardmäßige Padding der container-fluid klassen */
   /* Die Stylevorgabe, die für Text in der Website verwendet wird. */
   /* Die Stylevorgabe, die für Text in der Website verwendet wird. */
@@ -51,19 +51,24 @@
     font-style: normal;
 }
 
-.stylevorgaben2 #headerbild { /*Damit die Bilder nicht oben abgeschnitten werden bei großen BIldschirmen */
+#headerbild { /*Damit die Bilder nicht oben abgeschnitten werden bei großen BIldschirmen */
   object-fit: cover;
   object-position: 50% 0; /* positioned top left of the content box */
 }
 
-.stylevorgaben2 .no-padding {
+.spendenaufruf {
+  padding-top: 2rem;
+}
+
+.no-padding {
   padding-left: 0;
   padding-right: 0;
   padding-top: 2rem;
 }
+
 @media all and (max-width: 820px) and (min-width: 600px) {
 
-  .stylevorgaben2 .achterspaltenlayout {
+  .achterspaltenlayout {
     padding-left: 5rem;
     padding-right: 5rem;
   }
@@ -71,7 +76,7 @@
 
 @media all and (max-width: 1220px) and (min-width: 600px) {
 
-  .stylevorgaben2 .zwoelferspaltenlayout {
+  .zwoelferspaltenlayout {
     padding-left: 5rem;
     padding-right: 5rem;
   }
@@ -79,106 +84,105 @@
 
 @media all and (max-width: 600px) {
 
-  .stylevorgaben2 .zwoelferspaltenlayout {
+  .zwoelferspaltenlayout {
     padding-left: 2rem;
     padding-right: 2rem;
   }
-  .stylevorgaben2 .achterspaltenlayout {
+  .achterspaltenlayout {
     padding-left: 2rem;
     padding-right: 2rem;
     }
 }
 
-
-.stylevorgaben2 .achterspaltenlayout {
+.achterspaltenlayout {
   max-width: 760px;
   padding-bottom: 2rem;
 }
-.stylevorgaben2 .zwoelferspaltenlayout {
+.zwoelferspaltenlayout {
   max-width: 1160px;
-  padding-top: 3rem;
+  padding-top: 5rem;
 }
-.stylevorgaben2 .img-fluid {
+.img-fluid {
   padding-bottom: 3rem;
 }
-.stylevorgaben2 h1 {
+h1 {
   font-size: 52px;
   line-height: 60px;
   color: #ed6e2c;
   font-family: 'nerisblack';
 }
-.stylevorgaben2 h2 {
+h2 {
   font-size: 40px;
   line-height: 46px;
   color: #ed6e2c;
   font-family: 'nerisblack';
-  padding-bottom: 2rem;
+  padding-bottom: 4rem;
 }
-.stylevorgaben2 h3 {
+h3 {
   font-size: 24px;
   line-height: 28px;
   color: #ed6e2c;
   padding-bottom: 0.5rem;
   font-family: 'nerisblack';
 }
-.stylevorgaben2 h4 {
+h4 {
   font-size: 18px;
   line-height: 28px;
   color: #000000;
   font-family: 'source_sans_prosemibold';
 }
-.stylevorgaben2 #anleser {
+#anleser {
   font-size: 24px;
   line-height: 34px;
   font-family: 'source_sans_prolight';
   color: #333333;
   padding-bottom: 2rem;
 }
-.stylevorgaben2 #copy {
+#copy {
   font-size: 18px;
   line-height: 28px;
   font-family: 'source_sans_prolight';
   color: #000000;
 }
-.stylevorgaben2 #info-head {
+#info-head {
   font-size: 14px;
   line-height: 20px;
   font-family: 'source_sans_prosemibold';
 }
-.stylevorgaben2 #info {
+#info {
   font-size: 14px;
   line-height: 20px;
   font-family: 'source_sans_prolight';
 }
-.stylevorgaben2 #zitat {
+#zitat {
   font-size: 20px;
   line-height: 28px;
   color: #0062ae;
   font-family: 'bellotabold_italic';
   padding-bottom: 20px;
 }
-.stylevorgaben2 #autor {
+#autor {
   font-size: 16px;
   line-height: 18px;
   color: #ed6e2c;
   font-family: 'source_sans_prosemibold';
 }
 
-.stylevorgaben2 #naviUeberschrift {
+#naviUeberschrift {
   font-size: 16px;
   line-height: 22px;
   color: #333333;
   font-family: 'source_sans_probold';
 }
 
-.stylevorgaben2 #naviSubmenu{
+#naviSubmenu{
   font-size: 16px;
   line-height: 22px;
   color: #333333;
   font-family: 'source_sans_proregular';
 }
 
-.stylevorgaben2 .btn-primary { /*Anpassen der Buttons */
+.btn-primary { /*Anpassen der Buttons */
   background-color: #0062ae;
   border-width: 0;
   font-family: source_sans_prosemibold;
@@ -188,14 +192,14 @@
   border-color: #0062ae;
 }
 
-.stylevorgaben2 .btn-primary:hover { /*Anpassen der Buttons */
+.btn-primary:hover { /*Anpassen der Buttons */
   background-color: white;
   color: #0062ae;
   border-width: 1px;
   border-color: #0062ae;
 }
 
-.stylevorgaben2 #video {
+#video {
   min-height: 25rem;
   background-color: white;
   margin-top: -12.5rem;
@@ -209,23 +213,23 @@
   #myScrollspy {
     display: none;
   }
-  .stylevorgaben2 h1 {
+  h1 {
     font-size: 41px;
     line-height: 48px;
   }
-  .stylevorgaben2 h2 {
+  h2 {
     font-size: 32px;
     line-height: 36px;
   }
-  .stylevorgaben2 #anleser {
+  #anleser {
     font-size: 21px;
     line-height: 31px;
   }
-  .stylevorgaben2 #copy {
+  #copy {
     font-size: 16px;
     line-height: 25px;
   }
-  .stylevorgaben2 .btn-primary {
+  .btn-primary {
     font-size: 16px;
     line-height: 25px;
   }
@@ -238,56 +242,55 @@
     display: none;
   }
 
-  .stylevorgaben2 {
+  {
     font-size: 10px;
   }
-  .stylevorgaben2 h1 {
+  h1 {
     font-size: 31px;
     line-height: 36px;
   }
-  .stylevorgaben2 h2 {
+  h2 {
     font-size: 24px;
     line-height: 27px;
   }
-  .stylevorgaben2 #anleser {
+  #anleser {
     font-size: 19px;
     line-height: 27px;
   }
-  .stylevorgaben2 #copy {
+  #copy {
     font-size: 14px;
     line-height: 22px;
   }
-  .stylevorgaben2 .btn-primary {
+  .btn-primary {
     font-size: 14px;
     line-height: 22px;
   }
 }
 
-
-.stylevorgaben2 .bg-white {
+.bg-white {
   border: 0;
 }
-.stylevorgaben2 #horizontalrulerweis hr {
+#horizontalrulerweis hr {
   background-color: white;
   color: #ed6e2c;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
 
-.stylevorgaben2 hr {
+hr {
   margin-top: -.5rem;
   margin-bottom: 0.5rem;
 }
 
-.stylevorgaben2 #horizontalrulerweis p {
+#horizontalrulerweis p {
   margin-bottom: 0px;
 }
-.stylevorgaben2 .nav-link.active.tab {
+.nav-link.active.tab {
   background-color: #0062ae;
   color: white;
   font-weight: bold;
 }
-.stylevorgaben2 .nav-link.tab { /*Stylen der Navigationsleisten der verschiedenen Tabs auf den Spendenseiten , weißer hintergrund mit blauer schrift */
+.nav-link.tab { /*Stylen der Navigationsleisten der verschiedenen Tabs auf den Spendenseiten , weißer hintergrund mit blauer schrift */
   background-color: white;
   color: #0062ae;
   padding-left: 3rem;
@@ -299,28 +302,28 @@
   font-family: 'source_sans_prolight';
 }
 
-.stylevorgaben2 .card-link { /*So wird der ganze Akkordion-Tab klickbar gemacht */
+.card-link { /*So wird der ganze Akkordion-Tab klickbar gemacht */
   display: block;
   padding: .75rem 1.25rem;
 }
-.stylevorgaben2 .card-header { /*So wird der ganze Akkordion-Tab klickbar gemacht */
+.card-header { /*So wird der ganze Akkordion-Tab klickbar gemacht */
   padding: 0;
 }
 
 /* Die nav-pills der spenden-seiten kriegen so den passenden Hintergrund */
-.stylevorgaben2 .nav-pills li {
+.nav-pills li {
   padding: 0;
 }
 
-.stylevorgaben2 .carousel-control-prev-icon {
+.carousel-control-prev-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%6c757d' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
   margin-left: -100%;
 }
-.stylevorgaben2 .carousel-control-next-icon {
+.carousel-control-next-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%6c757d' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
   margin-right: -100%;
 }
-.stylevorgaben2 .grayscale {
+.grayscale {
   filter: gray;
   /* IE6-9 */
   -webkit-filter: grayscale(1);
@@ -328,35 +331,33 @@
   filter: grayscale(1);
   /* Microsoft Edge and Firefox 35+ */
 }
-.stylevorgaben2 .grayscale:hover {
+.grayscale:hover {
   -webkit-filter: grayscale(0);
   filter: none;
 }
-.stylevorgaben2 ::-webkit-input-placeholder {
+::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
   color: pink;
 }
-.stylevorgaben2 ::-moz-placeholder {
+::-moz-placeholder {
   /* Firefox 19+ */
   color: pink;
 }
-.stylevorgaben2 :-ms-input-placeholder {
+:-ms-input-placeholder {
   /* IE 10+ */
   color: pink;
 }
-.stylevorgaben2 :-moz-placeholder {
+:-moz-placeholder {
   /* Firefox 18- */
   color: pink;
 }
-.stylevorgaben2 .form-control {
-  background-color: #f8f5f2;
-}
-.stylevorgaben2 {
+.form-control {
   background-color: #f8f5f2;
 }
 
 body {
   margin: 0;
+  background-color: #f8f5f2;
 }
 
 .breadcrumb {
@@ -376,15 +377,15 @@ body {
   color: black;
 }
 
-.stylevorgaben2 a { /*Einfärben aller Links */
+a { /*Einfärben aller Links */
   color: #0062ae;
 }
 
-.stylevorgaben2 a p { /*Einfärben aller Links in paragraphen*/
+a p { /*Einfärben aller Links in paragraphen*/
   color: #0062ae;
 }
 
-.stylevorgaben2 #myScrollspy a { /* Einfärben des Scrollspys */
+#myScrollspy a { /* Einfärben des Scrollspys */
   border: 1px solid #9b9b9b;
   height: 10px;
   border-radius: 50%;
@@ -395,7 +396,7 @@ body {
   display: inline-block;
 }
 
-.stylevorgaben2 #myScrollspy span { /*  */
+#myScrollspy span { /*  */
   display: none;
   position: relative;
   transform: translateY(-25%);
@@ -404,11 +405,11 @@ body {
   color: #0062ae;
 }
 
-.stylevorgaben2 #myScrollspy a:hover + span { /* Einfärben des Scrollspys */
+#myScrollspy a:hover + span { /* Einfärben des Scrollspys */
   display: inline-block;
  }
 
-.stylevorgaben2 #myScrollspy { /* Positionieren des gesamten Scrollspy-Menüus  */
+#myScrollspy { /* Positionieren des gesamten Scrollspy-Menüus  */
   position: fixed;
   top: 15rem;
   z-index: 1;
