Bis zu arbeitsweise abständen anpassen

--- a/templates/craft_sicherungWebsite/templates/_layouts/weiterleitungkorrekt.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/weiterleitungkorrekt.html
@@ -3,7 +3,7 @@
   <div class="col-md-4" style="padding: 0;">
     <img class="img-fluid w-100 h-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
   </div>
-  <div class="col-md-8" style="padding-top: 2rem; padding-left: 30px; background-color: #f8f5f2;">
+  <div class="col-md-8" style="padding: 3rem; background-color: #f8f5f2;">
     <h3> {{ entry.title }} </h3>
     <div id="copy"> {{ entry.text }}</div>
   </div>
