--- a/templates/craft_sicherungWebsite/templates/_layouts/spendenaufrufmitherz.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/spendenaufrufmitherz.html
@@ -1,5 +1,5 @@
 {% set entry = craft.entries.section('fuerSie').slug('fuelleintrag').one() %}
-<div class="container-fluid no-padding pt-md-5 pb-md-5"  style="background-image: url({{ entry.bild.one().url }});">
+<div class="container-fluid spendenaufruf pt-md-5 pb-md-5"  style="background-image: url({{ entry.bild.one().url }});">
   <div class="row">
     <div class="col-sm-1">  </div>
     <div class="col-sm-3">   <img class="img-fluid mx-auto d-block" src="{{ entry.bild2.one().url }}" style="max-height: 200px; padding-bottom: 0;"> </div>
