--- a/templates/craft_sicherungWebsite/templates/ueberUns/konzept.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/konzept.html
@@ -50,7 +50,7 @@
 
       <div class="col-sm-1"></div>
       <div class="col-sm-2">
-        <img class="img-fluid rounded-circle" id="konzeptIcons" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" style="padding-bottom: 0; margin-bottom: 1rem;">
+        <img class="img-fluid rounded-circle mx-auto d-block" id="konzeptIcons" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" style="padding-bottom: 0; margin-bottom: 1rem;">
       </div>
       <div class="col-sm-1"></div>
       <div class="col-sm-8" style="padding-bottom: 2rem;">
@@ -72,17 +72,7 @@
 
 {% set entry = craft.entries.section('ueberUns').slug('leitbild').one() %}
 
-<div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px;">
-<div class="row">
-  <div class="col-md-4">
-    <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
-  </div>
-  <div class="col-md-8" style="padding-top: 2rem;">
-    <h3> {{ entry.title }} </h3>
-    <div id="copy"> {{ entry.text }}</div>
-  </div>
-</div>
-</div> <!-- Weitere Informationen zum Konzept -->
+{% include '_layouts/weiterleitungkorrekt' %}
 
 </div> <!-- Weißer Hintergrundcontainer -->
 
