--- a/templates/craft_sicherungWebsite/templates/ueberUns/leitbild.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/leitbild.html
@@ -20,33 +20,29 @@
 </nav>
 
 <div class="container achterspaltenlayout" style="position: relative;">
-  <div style="padding-bottom:80px; ">
     <h1 style="padding-bottom: 30px;"> Gelingendes Leben – Shalom in allen Lebensbereichen </h1>
     <p id="anleser"> Ziel der Arbeit von Chance e.V. ist es, Menschen und Gemeinschaften zu befähigen, sich selbst ein würdevolles und verantwortungsbewusstes
       Leben zu gestalten und ihre Lebensqualität eigenständig zu verbessern – selbstbestimmt, nachhaltig und ganzheitlich.  </p>
     </div>
-  </div>
 </div>
 
-<div class="container-fluid no-padding style" style="background-color: #ffffff;">
+<div class="container-fluid no-padding style" style="background-color: #ffffff; padding-top: 0;">
 
-<div class="container zwoelferspaltenlayout" style="padding-bottom: 1rem;">
+<div class="container zwoelferspaltenlayout" style="padding-bottom: 4.5rem;">
   <div class="row">
   {% set entry = craft.entries.section('ueberUns').slug('gemeinschaften').one() %}
-      <div class="col-sm-8">
+      <div class="col-md-8 pr-md-5"> <!-- pr-md-5 -> padding right bei devices ueber md-breakpoint auf 3rem gesetzt, sonst drunter -->
         <h3>{{ entry.title }}</h3> </br>
         <div id="copy"> {{ entry.text }} </div>
       </div>
 
-      <div class="col-sm-3" style="border-left:2px solid #ed6e2c; height: 40%;">
+      <div class="col-md-4" style="border-left:1px solid #ed6e2c; height: 40%;">
         {% set entries = craft.entries.section('ueberUns').slug('empfehlungen').one().children().all() %}
         {% set entry = random(entries) %}
         <img class="rounded-circle" style="max-height: 120px; max-width: 120px;" src=" {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}">
         <span id="copy" style="padding-top: 1.5rem; padding-bottom: 1rem; display: block;"> Empfehlung </span>
         <div id="zitat"> {{ entry.text }}  </div>
         <div id="autor" > {{ entry.title }}  </div>
-      <div class="col-1"></div>
-
   </div>
 </div>
 </div>
@@ -62,19 +58,19 @@
 </div> <!-- Das Wolkenbild mit den Zitaten drin -->
 </div> <!-- Weißer Hintergrundcontainer -->
 
-<div class="container achterspaltenlayout" style="padding-top: 3rem;">
+<div class="container achterspaltenlayout" style="padding-top: 5rem;">
   {% set entry = craft.entries.section('ueberUns').slug('folgende-grafik').one() %}
   <h3> {{ entry.title }} </h3>
 </div>
 
-<div class="container zwoelferspaltenlayout">
-  <img class="img-fluid" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" style="padding-bottom: 0;">
+<div class="container zwoelferspaltenlayout" style="padding-top: 2rem;">
+  <img class="img-fluid" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" style="padding-bottom: 2rem;">
 </div>
 
   <img class="img-fluid mx-auto d-block" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-ueber-uns-leitbild-kind.jpg').one().getUrl() }} ">
 
-<div class="container-fluid no-padding" style="background-color: white; padding-bottom: 3rem;">
-  <div class="container zwoelferspaltenlayout" style="padding-top: 0px;">
+<div class="container-fluid no-padding" style="background-color: white; padding-bottom: 3rem; padding-top: 4rem;">
+  <div class="container zwoelferspaltenlayout" style="padding-top: 0;">
   <p id="anleser" class="text-center"> Erfahren Sie mehr über uns </p>
   </div>
 
