--- a/templates/craft_sicherungWebsite/templates/ueberUns/motivation.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/motivation.html
@@ -20,15 +20,13 @@
   <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; width: 40%; left: 0px;">
 
 <div class="container achterspaltenlayout" style="position: relative;">
-  <div style="padding-bottom:4rem;">
     {% set entry = craft.entries.section('ueberUns').slug('motivation').one() %}
     <h1 style="padding-bottom: 2rem;"> {{ entry.langerText }}   </h1>
     <div id="anleser"> {{ entry.zusatzfeld1 }} </div>
-    </div>
   </div>
 </div>
 
-<div class="container-fluid no-padding style" style="background-color: #ffffff;">
+<div class="container-fluid no-padding style" style="background-color: #ffffff; padding-top: 0;">
 
 <div class="container zwoelferspaltenlayout">
   <div class="row">
